openshift/servicemesh/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
spec:
  hosts:
  - "*"
  gateways:
  - leaf1-gateway
  http:
  - route:
    - destination:
        host: leaf1
        port:
          number: 8080
